# FedTree

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  README.md  ablation_bagging.sh  ablation_iteration.sh  ablation_nbins.sh  ablation_quantization.sh  ablation_ratio.sh  ablation_regularization.sh  debug_single.sh  download_datasets.sh  environment.yml  remove_single.sh  run.sh  run_single_tree.sh  test_remove.sh  test_remove_all.sh  test_remove_deltaboost.sh  test_remove_deltaboost_tree_1.sh  test_remove_deltaboost_tree_10.sh  test_remove_deltaboost_tree_100.sh  test_remove_deltaboost_tree_30.sh  test_remove_deltaboost_tree_30_covtype.sh  test_remove_deltaboost_tree_50.sh  test_remove_deltaboost_tree_50_covtype.sh  test_remove_gbdt.sh  test_remove_gbdt_efficiency.sh  test_remove_mem.sh  test_remove_mem_deltaboost_single.sh  test_remove_mem_gbdt.sh  test_remove_mem_gbdt_single.sh  test_remove_mem_single.sh  test_remove_seq.sh  test_remove_single.sh
bash/: run_gbdt_remain.sh  run_gbdt_remain_single_tree.sh  run_remove_ratio.sh  run_remove_ratio_single_tree.sh
conf/: breast.conf  cadata.conf  cadata_1e-02.conf  cadata_1e-03.conf  codrna.conf  codrna_1e-02.conf  codrna_1e-03.conf  covtype.conf  covtype_1e-02.conf  covtype_1e-03.conf  dense.conf  gisette.conf  gisette_1e-02.conf  gisette_1e-03.conf  higgs.conf  higgs_1e-02.conf  higgs_1e-03.conf  msd.conf  msd_1e-02.conf  msd_1e-03.conf  overfit.conf
conf/gbdt/: cadata.conf  codrna.conf  covtype.conf  covtype_1e-03.conf  gisette.conf  msd.conf
conf/tree1/: cadata_1e-02.conf  cadata_1e-03.conf  codrna_1e-02.conf  codrna_1e-03.conf  covtype_1e-02.conf  covtype_1e-03.conf  gisette_1e-02.conf  gisette_1e-03.conf  msd_1e-02.conf  msd_1e-03.conf
conf/tree10/: cadata_1e-03.conf  codrna_1e-02.conf  codrna_1e-03.conf  covtype_1e-02.conf  covtype_1e-03.conf  gisette_1e-02.conf  gisette_1e-03.conf  msd_1e-03.conf
conf/tree100/: gisette_1e-03.conf  msd_1e-02.conf  msd_1e-03.conf
conf/tree30/: cadata_1e-02.conf  cadata_1e-03.conf  codrna_1e-03.conf  gisette_1e-02.conf  msd_1e-02.conf
conf/tree50/: cadata_1e-02.conf  cadata_1e-03.conf  codrna_1e-02.conf  codrna_1e-03.conf  covtype_1e-02.conf  covtype_1e-03.conf  gisette_1e-02.conf  (+3 more)
python-utils/: GBDT.py  analysis.ipynb  analyze_boosting.py  analyze_deltaboost.py  analyze_single_tree.py  analyze_zeta.py  attack.py  baseline.py  cut_points.py  deltagain.py  gain_log_reader.py  generate_dense_dataset.py  generate_overfit_dataset.py  output  plot.py  plot_ablation.py  plot_results.py  plot_time.py  remove_sample.py  scale_y.py  scale_year_msd.py  shuffle.py  test.py  train_test_split.py
(+6986 files in other folders)
